fixed some error responses and response body
